<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background"
	>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="10dp"
		android:background="@color/white">
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:layout_marginTop="10dp">

			<ImageView
				android:id="@+id/prevMonth"
				android:src="@mipmap/left_arrow_calendar"
				android:layout_gravity="center_vertical"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="20dp">
			</ImageView>
			<TextView
				android:id="@+id/currentMonth"
				android:gravity="center"
				android:layout_gravity="center_vertical"
				android:text="Current Month"
				style="@style/M_TextViewLabelStyle"
				android:layout_height="wrap_content"
				android:layout_width="0dp"
				android:layout_weight="3">
			</TextView>
			<ImageView
				android:id="@+id/nextMonth"
				android:src="@mipmap/right_arrow_calendar"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_gravity="center_vertical"
				android:layout_height="20dp">
			</ImageView>
		</LinearLayout>
		<View
			android:layout_width="match_parent"
			android:layout_height="0.75dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="10dp"
			android:background="@color/text_color_orange"/>
		<LinearLayout
			android:id="@+id/calendarheader"
			android:layout_gravity="center"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:weightSum="7"
			android:orientation="horizontal"
			android:layout_marginTop="5dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginBottom="5dp">
			<!--android:background="@drawable/calendar_button_selector"-->
			<TextView
				android:textColor="@color/text_color_orange"
				android:layout_gravity="center"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/sun">
			</TextView>
			<TextView
				android:textColor="@color/text_color_orange"
				android:layout_gravity="center"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/mon">
			</TextView>
			<TextView
				android:layout_gravity="center"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:textColor="@color/text_color_orange"
				android:text="@string/tue">
			</TextView>
			<TextView
				android:layout_gravity="center"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:textColor="@color/text_color_orange"
				android:text="@string/wed">
			</TextView>
			<TextView
				android:layout_gravity="center"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:textColor="@color/text_color_orange"
				android:text="@string/thu">
			</TextView>
			<TextView
				android:layout_gravity="center"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:textColor="@color/text_color_orange"
				android:text="@string/fri">
			</TextView>
			<TextView
				android:layout_gravity="center"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:textColor="@color/text_color_orange"
				android:text="@string/sat">
			</TextView>
		</LinearLayout>
		<View
			android:layout_width="match_parent"
			android:layout_height="0.75dp"
			android:layout_marginTop="5dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:background="@color/text_color_orange"/>
		<GridView
			android:layout_margin="10dp"
			android:id="@+id/calendarGridView"
			android:numColumns="7"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		</GridView>
		<View
			android:layout_width="match_parent"
			android:layout_height="0.75dp"
			android:layout_marginTop="5dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:background="@color/color_line_seperator"/>
		<android.support.v7.widget.RecyclerView
			android:layout_marginTop="10dp"
			android:id="@+id/recyclerViewMonthlyEvents"
			android:layout_below="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:scrollbars="vertical" />
	</LinearLayout>
</LinearLayout>
