<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_img"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.sr.masharef.masharef.masharef.com.sr.masharef.masharef.registration.RegistrationActivity">

    <!--<include-->
        <!--android:id="@+id/header_layout"-->
        <!--layout="@layout/dialog_header"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="60dp" />-->

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="180dp"
            android:layout_height="90dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="28dp"
            android:background="@mipmap/bg_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="25dp"
            android:textColor="@android:color/white"
            android:text="@string/wait_Approval" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:padding="25dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/refresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_active"
                android:textColor="@color/white"
                android:text="@string/refresh" />

            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_deactive"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:text="@string/logout" />


        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>